<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation"
    >

    <string name="app_name">LCD Live Wallpaper</string>
    <string name="settings_title">Wallpaper Settings</string>
    <string name="wallpaper_desc">A live wallpaper that looks like a liquid crystal display</string>
    <string name="ad_unit_id"></string>

    <!-- SETTINGS MENU TEXT -->
    <string name="general_settings">General Settings</string>
    <string name="eye_candy_title">EyeCandy</string>
    <string name="eye_candy_desc">Select what the background pixels should look like</string>
    <string name="eye_candy_specific_settings">EyeCandy Specific Settings</string>
    <string name="random_settings">Random Settings</string>
    <string name="random_density_title">Random Pixel Density</string>
    <string name="random_density_desc">How much of the random pixels should be active</string>
    <string name="waterfall_settings">Waterfall Settings</string>
    <string name="waterfall_maxnum_title">Maximum Number of Strings</string>
    <string name="waterfall_maxnum_desc">Set how many strings can fall at once</string>
    <string name="waterfall_overlap">Overlapping</string>
    <string name="colors_settings">Colors</string>
    <string name="colors_set">Color Set</string>
    <string name="colors_custom">Use Custom Colors</string>
    <string name="colors_bg">Background Color</string>
    <string name="colors_px">Pixel Color</string>
    <string name="colors_bg_desc">0xRRGGBB ( R = Red, G = Green, B=Blue Hexadecimal format )</string>
    <string name="colors_px_desc">0xRRGGBB ( R = Red, G = Green, B=Blue Hexadecimal format )</string>
    <string name="datetime_settings">Date and Time</string>
    <string name="datetime_showclock_title">Show Clock</string>
    <string name="datetime_showclock_desc">Enable to show the time on the virtual LCD</string>
    <string name="datetime_showdate_title">Show Date</string>
    <string name="datetime_showdate_desc">Enable to show the date on the virtual LCD</string>
    <string name="datetime_specific_settings">Date and Time Specific Settings</string>
    <string name="datetime_clocktype_title">Clock Type</string>
    <string name="datetime_clocktype_desc">Do you want the time in decimals or in binary (note: the lines for binary are //||\\\\ HH MM SS)</string>
    <string name="datetime_dateformat">Date Format</string>
    <string name="datetime_invertbin_title">Invert Binary Clock Colors</string>
    <string name="datetime_invertbin_desc"></string>
    <string name="datetime_bigbin_title">Big Binary Clock</string>
    <string name="datetime_bigbin_desc"></string>
    <string name="perf_settings">Performance</string>
    <string name="perf_framerate_title">Framerate</string>
    <string name="perf_framerate_desc">How many times per second should the screen refresh? Lower values mean better battery life.</string>
    <string name="about_settings">About</string>
    <string name="about_creators_title">Creators</string>
    <string name="about_creators_desc">Cezar FLESERIU\nAndrei SIRBU</string>
    <string name="about_rate">Rate this app</string>
    <string name="about_donate_title">Get Donate Version</string>
    <string name="about_donate_desc"></string>
    <string name="about_email_title">Email</string>
    <string name="about_email_desc">wststreet2@gmail.com</string>
    <!-- SETTINGS MENU END -->

    <!-- DONATE DIALOG START -->
    <string name="donate_dialog_title">Donate</string>
    <string name="donate_dialog_message">Have you ever considered buying the donate version? It would help us.</string>
    <string name="donate_dialog_ok">Yes</string>
    <string name="donate_dialog_maybe">Maybe</string>
    <string name="donate_dialog_cancel">No</string>
    <!-- DONATE DIALOG END -->


    <!-- SETTINGS MENU ARRAYS -->

    <string-array name="color_styles">
        <item name="Classic Gray">Classic Gray</item>
        <item name="Classic Green">Classic Green</item>
        <item name="Classic Orange">Classic Orange</item>
        <item name="Blue Backlight">Blue Backlight</item>
        <item name="White on Black">White on Black</item>
        <item name="Matrix Green">Matrix Green</item>
        <item name="Red on Black">Red on Black</item>
        <item name="Blue on Black">Blue on Black</item>
        <item name="White on Blue">White on Blue</item>
    </string-array>
    <string-array name="eyeCandyArray">
        <item name="none">None</item>
        <item name="checkerbox">Checkerbox</item>
        <item name="gradient">Gradient</item>
        <item name="random">Random</item>
        <item name="waterfall">Waterfall</item>
    </string-array>
    <string-array name="clockType">
        <item name="decimal">Decimal</item>
        <item name="binary">Binary</item>
    </string-array>
    <string-array name="dateFormat">
        <item name="european">European (dd/MM/yy)</item>
        <item name="american">American (MM/dd/yy)</item>
        <item name="japanese">Japanese (yy/MM/dd)</item>
    </string-array>

    <!-- SETTINGS MENU ARRAYS END -->


    <!-- DO NOT TRANSLATE BELOW THIS LINE!!!! -->
    <!-- DO NOT TRANSLATE BELOW THIS LINE!!!! -->
    <!-- DO NOT TRANSLATE BELOW THIS LINE!!!! -->
    <!-- DO NOT TRANSLATE BELOW THIS LINE!!!! -->
    <!-- DO NOT TRANSLATE BELOW THIS LINE!!!! -->


    <!-- SETTINGS MENU ARRAY VALUES -->

    <string-array name="eyeCandyArray_values">
        <item name="none">None</item>
        <item name="checkerbox">Checkerbox</item>
        <item name="gradient">Gradient</item>
        <item name="random">Random</item>
        <item name="waterfall">Waterfall</item>
    </string-array>
    <string-array name="clockType_values">
        <item name="decimal">Decimal</item>
        <item name="binary">Binary</item>
    </string-array>
    <string-array name="dateFormat_values">
        <item name="european">dd/MM/yy</item>
        <item name="american">MM/dd/yy</item>
        <item name="japanese">yy/MM/dd</item>
    </string-array>
    <string-array name="color_styles_values">
        <item name="Classic Gray">999999|333333</item>
        <item name="Classic Green">99AA99|333333</item>
        <item name="Classic Orange">FEDEAC|333333</item>
        <item name="Blue Backlight">007FFF|333333</item>
        <item name="White on Black">000000|FFFFFF</item>
        <item name="Matrix Green">000000|00CC00</item>
        <item name="Red on Black">000000|FF0000</item>
        <item name="Blue on Black">000000|0000FF</item>
        <item name="White on Blue">0070FF|FFFFFF</item>
    </string-array>

    <!-- SETTINGS MENU ARRAY VALUES END -->



</resources>