<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:seekbar="http://schemas.android.com/apk/res/org.kamehamehaaa.android.livewallpaper"
    android:key="livewallpaper_settings"
    android:title="@string/settings_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="0dp"
    android:paddingRight="0dp" >

    <PreferenceCategory
        android:key="bg_set_cat"
        android:title="@string/general_settings" >
        <ListPreference
            android:defaultValue="waterfall"
            android:dialogTitle="@string/eye_candy_title"
            android:entries="@array/eyeCandyArray"
            android:entryValues="@array/eyeCandyArray_values"
            android:key="eye_candy"
            android:summary="@string/eye_candy_desc"
            android:title="@string/eye_candy_title" />

        <PreferenceScreen
            android:key="specific_pref_screen"
            android:title="@string/eye_candy_specific_settings" >
            <PreferenceScreen
                android:key="random_pref_screen"
                android:title="@string/random_settings" >
                <org.kamehamehaaa.android.livewallpaper.settings.SeekBarPreference
                    android:defaultValue="50"
                    android:dialogMessage="@string/random_density_title"
                    android:key="random_pixel_density"
                    android:summary="@string/random_density_desc"
                    android:text="%"
                    android:title="@string/random_density_title"
                    seekbar:maxValue="100"
                    seekbar:minValue="1" />
            </PreferenceScreen>
            <PreferenceScreen
                android:key="waterfall_pref_screen"
                android:title="@string/waterfall_settings" >
                <org.kamehamehaaa.android.livewallpaper.settings.SeekBarPreference
                    android:defaultValue="100"
                    android:dialogMessage="@string/waterfall_maxnum_title"
                    android:key="waterfall_strings2"
                    android:summary="@string/waterfall_maxnum_desc"
                    android:title="@string/waterfall_maxnum_title"
                    seekbar:maxValue="1000"
                    seekbar:minValue="1" />

                <CheckBoxPreference
                    android:defaultValue="true"
                    android:key="waterfall_overlap"
                    android:title="@string/waterfall_overlap" />
            </PreferenceScreen>
        </PreferenceScreen>
        <PreferenceScreen
            android:key="colors_pref_screen"
            android:title="@string/colors_settings" >
            <ListPreference
                android:defaultValue="999999|333333"
                android:entries="@array/color_styles"
                android:entryValues="@array/color_styles_values"
                android:key="color_set"
                android:title="@string/colors_set" />

            <CheckBoxPreference
                android:defaultValue="false"
                android:key="use_custom_colors"
                android:title="@string/colors_custom" />

            <EditTextPreference
                android:defaultValue="0x88AA88"
                android:key="color"
                android:summary="@string/colors_bg_desc"
                android:title="@string/colors_bg" >
            </EditTextPreference>
            <EditTextPreference
                android:defaultValue="0x333333"
                android:key="pixel_color"
                android:summary="@string/colors_px_desc"
                android:title="@string/colors_px" >
            </EditTextPreference>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="detail_set_cat"
        android:title="@string/datetime_settings" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="show_clock"
            android:summary="@string/datetime_showclock_desc"
            android:title="@string/datetime_showclock_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="show_date"
            android:summary="@string/datetime_showdate_desc"
            android:title="@string/datetime_showdate_title" />

        <PreferenceScreen
            android:key="detail_set_cat"
            android:title="@string/datetime_specific_settings" >
            <ListPreference
                android:defaultValue="decimal"
                android:dialogTitle="@string/datetime_clocktype_title"
                android:entries="@array/clockType"
                android:entryValues="@array/clockType_values"
                android:key="clock_type"
                android:summary="@string/datetime_clocktype_desc"
                android:title="@string/datetime_clocktype_title" />
            <ListPreference
                android:defaultValue="dd/MM/yy"
                android:dialogTitle="@string/datetime_dateformat"
                android:entries="@array/dateFormat"
                android:entryValues="@array/dateFormat_values"
                android:key="date_format"
                android:title="@string/datetime_dateformat" />

            <CheckBoxPreference
                android:defaultValue="false"
                android:key="black_clock"
                android:summary="@string/datetime_invertbin_desc"
                android:title="@string/datetime_invertbin_title" >
            </CheckBoxPreference>
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="big_clock"
                android:summary="@string/datetime_bigbin_desc"
                android:title="@string/datetime_bigbin_title" >
            </CheckBoxPreference>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="perf_set_cat"
        android:title="@string/perf_settings" >
        <org.kamehamehaaa.android.livewallpaper.settings.SeekBarPreference
            android:defaultValue="10"
            android:dialogMessage="@string/perf_framerate_title"
            android:key="framerate"
            android:summary="@string/perf_framerate_desc"
            android:text=" FPS"
            android:title="@string/perf_framerate_title"
            seekbar:maxValue="100"
            seekbar:minValue="1" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="about_set_cat"
        android:title="@string/about_settings" >
        <Preference
            android:summary="@string/about_creators_desc"
            android:title="@string/about_creators_title" >
        </Preference>
        <Preference android:title="@string/about_rate" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="market://details?id=org.kamehamehaaa.android.livewallpaper" />
        </Preference>
        <Preference
            android:summary="@string/about_donate_desc"
            android:title="@string/about_donate_title" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://play.google.com/store/apps/details?id=org.kamehamehaaa.android.livewallpaperpro" />
        </Preference>
        <Preference
            android:summary="@string/about_email_desc"
            android:title="@string/about_email_title" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="mailto:wststreet2@gmail.com" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>